Trace increment 2 (Codex V2 oracle contract): typed envelope, raw candidate order, route/finalize observation
Schema v2 envelope over shadow DecisionSnapshot; raw-vs-merge candidate order;
typed route incl. all 5 interceptors + chaos/fallback/emergency; typed rule/
domain/kind ids; TraceFinalization with pre-safety winner + typed safety
corrections; intended state events; COMPLETE/INCOMPLETE with typed failures.
Observation only - zero control-flow/RNG change; capture stays DISABLED.
Closes Codex m00268 blockers + live-read m00290/m00291. 91 tests green.
Stage 4/5 (inner mutation observation, real-decide fixtures) = next increment.
NOT deployed.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>